Implement get SOIs
